hphp/hack/test/typecheck/expression_trees/instance_method_call.php.exp
File "instance_method_call.php", line 13, characters 5-20:
Expression trees do not support calling instance methods (Parsing[1002])
